--- a/force-app/main/default/lwc/bMICALCULATOR/bMICALCULATOR.css
+++ b/force-app/main/default/lwc/bMICALCULATOR/bMICALCULATOR.css
@@ -1,9 +1,45 @@
+:host(){
+
+    --dark-blue:#0b0d21;
+    --light-white:#fafafa;
+--light-blue:#4f7df9;
+--light-pink:#e91e63;
+--dull-blue:#1d1e33;
+--size-16:16px;
+--size-14:14px;
+--size-12:12px;
+
+}
+
+
+
 .box{
     max-width: 420px;
     text-align: center;
     margin: auto;
-    background-color: #0b0d21;
-    color: white;
-    padding: 16px;
+    background-color:var(--dark-blue);
+    color: var(--light-white);
+    padding: var(--size-16);
     border-radius: 38px;
 }
+
+
+h1 {
+    
+    
+    font-weight: bold;
+    font-size: 36px;
+    padding: 20px 0px;
+}
+
+.info-wrapper {
+    background: var(--dull-blue);
+    padding: var(--size-16);
+    border-bottom-left-radius: var(--size-16);
+    border-bottom-right-radius: var(--size-16);
+    font-size: var(--size-14);
+    text-align: center;
+
+}
+    
+    
